# big-data-app

./: .env.example  .gitignore  pyproject.toml  spark.ipynb
metrics/: durations.json  memory.json
