[tool.poetry]
name = "big-data-app"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
adjusttext = "^0.8"
black = "^23.11.0"
isort = "^5.12.0"
jupyterlab = "^4.0.9"
jupyterlab-code-formatter = "^2.2.1"
jupyterlab-git = "^0.50.0"
jupyterlab-lsp = "^5.0.1"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
pyspark = "^3.5.0"
python = "^3.11"
python-dotenv = "^1.0.0"
python-lsp-ruff = "^2.0.0"
python-lsp-server = "^1.9.0"
s3fs = "^2023.10.0"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
